# rabbitmq-server

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  WORKSPACE.bazel  rabbitmq.bzl  user-template.bazelrc  workspace_helpers.bzl
.github/workflows/: oci.yaml  test-mixed-versions.yaml  test-windows.yaml  test.yaml
bazel/bzlmod/: extensions.bzl
bazel/elixir/: BUILD.bazel  elixir.bzl  elixir_build.bzl  elixir_toolchain.bzl
bazel/mix/: mix_app.bzl
